--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       theme: {
         extend: {
           colors: {
-            primary: '#1E40AF',
+            primary: '#65AA3C',
             secondary: '#0EA5E9',
           }
         }
@@ -79,8 +79,12 @@
 
 <!-- ================= FEATURES ================= -->
 <section id="features" class="py-20">
-  <div class="max-w-7xl mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center mb-12">Key Features</h3>
+
+	<div class="max-w-7xl mx-auto px-4 text-center">
+
+    <h3 class="text-3xl md:text-4xl font-bold mb-12 text-primary">
+      Key Features
+    </h3>
     <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
       <div class="bg-slate-50 p-6 rounded-xl shadow">📍 Real-Time Tracking</div>
       <div class="bg-slate-50 p-6 rounded-xl shadow">🤖 Automated Dispatch</div>
@@ -94,9 +98,10 @@
 
 <!-- ================= MODULES ================= -->
 <section id="modules" class="py-20 bg-white">
-  <div class="max-w-7xl mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center mb-14">
-      Complete System Modules
+ 	 <div class="max-w-7xl mx-auto px-4 text-center">
+
+    <h3 class="text-3xl md:text-4xl font-bold mb-12 text-primary">
+       Complete System Modules
     </h3>
 
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-sm">
